[tool.poetry]
name = "pyjvm"
version = "0.1.0"
description = "a toy jvm implementation in python"
authors = ["Chaitanya Sharma <chaitanya@3bandar.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
tox = "^3.14.5"
click = "^7.0"
pytest-cov = "^2.8.1"
codecov = "^2.0.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
